# jellyfin-scripts

./: .env.sample  .gitignore  README.md  pyproject.toml  rename_file.ps1  rename_monogatari.py  rename_shows.py  rename_subtitles.py  test_ai.py
my_utils/: my_ai.py  my_logger.py
prompts/: monogatari_sort_prompt.txt  renaming_prompt.txt  renaming_subtitles_prompt.txt
