[project]
name = "jellyfin"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "techstay", email = "lovery521@gmail.com"},
]
dependencies = ["openai>=1.63.2", "python-dotenv>=1.0.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "pytest>=8.3.5",
]
